# cookiecutter-python-package

./: cookiecutter.json
{{cookiecutter.package_name}}/: .gitignore  README.md  azure_pipelines_package.yml  azure_pipelines_precommit.yml  azure_pipelines_validate.yml  requirements.txt  setup.cfg  setup.py
{{cookiecutter.package_name}}/tests/: __main__.py  test_sample.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: __main__.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/some_pkg/: some_mod.py
