[metadata]
name = {{cookiecutter.package_name}}
version = 0.1.0
author = {{cookiecutter.author_name}}
author_email = {{cookiecutter.author_email}}
url = {{cookiecutter.author_url}}
description = {{cookiecutter.package_desc}}
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find: